# python-template

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  sync-python-deps.sh
.devcontainer/: Dockerfile  devcontainer.json  post-attach.sh  post-create.sh  post-start.sh
notebooks/: get-started.ipynb
src/jeteve_template/: __init__.py  cli.py  sample.py  stringstuff.py
src/jeteve_template/arithmetic/: __init__.py  multiply.py
tests/: test_basic.py
