[project]
name = "jeteve_template"
version = "0.0.1"
authors = [
  { name="Jerome Eteve", email="jerome.eteve@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []
[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/jeteve/python-template"
"Bug Tracker" = "https://github.com/jeteve/python-template/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.pytest.ini_options]
pythonpath = [
  "src"
]
